<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.auth.SignUpActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="@dimen/default_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:hint="@string/name"
            android:id="@+id/name_layout"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/EditText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:hint="@string/surname"
            android:id="@+id/surname_layout"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname"
                style="@style/EditText"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:hint="@string/email"
            android:id="@+id/email_layout"
            android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                style="@style/EditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="12dp"
            android:id="@+id/send_code"
            style="@style/GreenButtonCardView">
            <TextView
                style="@style/GreenTextInCardView"
                android:text="@string/send_code"/>
        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>

</LinearLayout>