<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_horizontal_margin"
    android:orientation="vertical"
    tools:context=".presentation.account.creategroup.CreateGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView

            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/create_group"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/groups_name"
        android:id="@+id/group_name_layout"
        android:layout_marginTop="18dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/group_name"
            style="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/create_group_description"
        android:textColor="@color/description" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/create_cardview"
        style="@style/GreenButtonCardView"
        android:layout_marginTop="18dp">

        <TextView
            android:id="@+id/create_button"
            style="@style/GreenTextInCardView"
            android:text="@string/create" />
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>