<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/horizontal_margin_schedule_setting"
    android:orientation="vertical"
    tools:context=".presentation.AccountFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView

                    android:id="@+id/arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/classic_arrow_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/personal_account"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView style="@style/LightGreenButtonCardView">

                    <TextView
                        style="@style/LightGreenTextCardView"
                        android:text="@string/sign_in" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/LightGreenButtonCardView"
                    android:layout_marginTop="12dp">

                    <TextView
                        style="@style/LightGreenTextCardView"
                        android:text="@string/sign_up" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingBottom="10dp"
                    android:text="@string/for_chess_player"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <RelativeLayout
                    style="@style/ButtonCardView"
                    android:background="@drawable/poly_chess_gradient">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/poly_chess_icon" />

                        <TextView
                            style="@style/GreenTextCardView"
                            android:layout_marginStart="12dp"

                            android:text="@string/sing_in_by_poly_chess"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:backgroundTint="#F3F0FF"

                android:layout_marginTop="36dp"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="12dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="12dp"
                    android:paddingHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/sleep_calm"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/sleep_calm_description"
                        android:textColor="@color/for_description" />

                    <com.google.android.material.card.MaterialCardView
                        style="@style/ButtonCardView"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="#DED7FF"
                        android:layout_marginBottom="12dp">
                        <TextView
                            style="@style/TextCardView"
                            android:text="@string/alarm_clock"
                            android:textColor="#735CDD" />
                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>



            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:backgroundTint="@color/light_green"
                android:layout_marginTop="26dp"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="12dp">
                <LinearLayout
                    android:layout_marginBottom="14dp"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp"
                    android:paddingHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/chess_player_mode"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/chess_player_mode_description"
                        android:textColor="@color/for_description" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_marginTop="12dp"
                        style="@style/GreenButtonCardView">
                        <TextView
                            android:text="@string/auto_attending"
                            style="@style/GreenTextCardView"/>
                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>



</LinearLayout>



