<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_horizontal_margin"
    android:layout_height="match_parent"
    tools:context=".presentation.account.jointogroup.JoinToGroupActivity">

    <TextView
        android:gravity="center"
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/join_to_group"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:hint="@string/invite"
        android:id="@+id/invite_layout"
        app:counterMaxLength="128"
        app:counterEnabled="false"
        android:layout_marginTop="18dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/invite"
            style="@style/EditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="8dp"
        android:id="@+id/sign_in"
        style="@style/GreenButtonCardView">
        <TextView
            style="@style/GreenTextInCardView"
            android:text="@string/sign_in"/>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>