<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="@dimen/horizontal_margin_schedule_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/name" />

        <com.google.android.material.card.MaterialCardView
            style="@style/EditTextCardView"
            android:layout_marginTop="8dp">
            <EditText
                style="@style/EditText"
                android:hint="@string/name"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_marginTop="12dp"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/surname" />

        <com.google.android.material.card.MaterialCardView
            style="@style/EditTextCardView"
            android:layout_marginTop="8dp">
            <EditText
                style="@style/EditText"
                android:hint="@string/surname"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_marginTop="12dp"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/email" />

        <com.google.android.material.card.MaterialCardView
            style="@style/EditTextCardView"
            android:layout_marginTop="8dp">
            <EditText
                style="@style/EditText"
                android:hint="@string/email_example"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="12dp"
            style="@style/GreenButtonCardView">
            <TextView
                style="@style/GreenTextCardView"
                android:text="@string/send_code"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:textSize="14sp"
            android:text="@string/text_request_after_some_second"
            android:textColor="@color/dark_green"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="40dp"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/confirmation_code_from_email" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="8dp"
            style="@style/EditTextCardView">
            <EditText
                android:inputType="number"
                style="@style/EditText"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="12dp"
            style="@style/GreenButtonCardView">
            <TextView
                style="@style/GreenTextCardView"
                android:text="@string/sign_up"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>